observer_k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observer-eye
  labels:
    istio-injection: enabled
