observer_k8s/01-istio-mesh.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: observer-eye
spec:
  mtls:
    mode: STRICT
