observer_k8s/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  namespace: observer-eye
spec:
  replicas: 2
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
        - name: consumer
          image: observer-eye-middleware:latest
          imagePullPolicy: Never
          command: ["python", "-m", "telemetry.kafka_consumer"]
